--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
   <hgroup class="sidebar__title">
     <h1>Data 102 Spring 2020</h1>
     <p>
-        <small>Moritz Hardt</small>  <br/> 
+        <small>Michael Jordan</small>  <br/> 
         <small>Jacob Steinhardt</small>
     </p>
   </hgroup>
