--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
   <aside class="sidebar">
   <hgroup class="sidebar__title">
-    <h1>Data 102 Spring 2020</h1>
+    <h1>Data 102 Fall 2020</h1>
     <p>
         <small>Michael Jordan</small>  <br/> 
         <small>Jacob Steinhardt</small>
