--- a/_includes/syllabus_entries.html
+++ b/_includes/syllabus_entries.html
@@ -4,13 +4,13 @@
 
   <!-- Use this block if starting lecture date is week begin -->
   {% assign is_week_begin = lecture_counter | plus: 1 | modulo: 2 %}
-  {% assign week = lecture_counter - 1 | divided_by: 2.0 | ceil %}
+  {% assign week = lecture_counter | divided_by: 2.0 | ceil %}
   {% assign is_off_week = false %}
 
   <!-- Use this block if starting lecture data is not week begin -->
   {% comment %}
   {% assign is_week_begin = lecture_counter | modulo: 2 %}
-  {% assign week = lecture_counter - 1 | plus: 1 | divided_by: 2.0 | ceil %}
+  {% assign week = lecture_counter | plus: 1 | divided_by: 2.0 | ceil %}
   {% assign is_off_week = true %}
   {% endcomment %}
 
