--- a/_includes/syllabus_entries.html
+++ b/_includes/syllabus_entries.html
@@ -1,10 +1,10 @@
-{% assign lecture_counter = 1 %}
+{% assign lecture_counter = 0 %}
 
 {% for lecture in site.data.lectures %}
 
   <!-- Use this block if starting lecture date is week begin -->
-  {% assign is_week_begin = lecture_counter | plus: 1 | modulo: 2 %}
-  {% assign week = lecture_counter | divided_by: 2.0 | ceil %}
+  {% assign is_week_begin = lecture_counter | modulo: 2 %}
+  {% assign week = lecture_counter | plus: 1 | divided_by: 2.0 | ceil %}
   {% assign is_off_week = false %}
 
   <!-- Use this block if starting lecture data is not week begin -->
